--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.ODABlueTheme">
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="your_key_here"/>
-        
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,8 +30,15 @@
         <activity
             android:name=".ui.HomeActivity"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ui.ComplaintsActivity"></activity>
+            android:screenOrientation="portrait">
+
+        </activity>
+
+        <activity android:name=".ui.ComplaintsActivity"
+            android:theme="@style/AppTheme.ODAWhiteTheme"
+            android:screenOrientation="portrait">
+
+        </activity>
     </application>
 
 </manifest>
